# LanJing

./: .gitignore  .lintstagedrc.js  .prettierignore  CONCEPTS.md  CONTEXT-MAP.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  lefthook.yml  package.json  pnpm-workspace.yaml  vite.config.js
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  development-task.yml  experience-proposal.yml  feature-spec.yml
.husky/: pre-commit  pre-push
.impeccable/: design.json
docs/adr/: 0001-separate-content-spaces-and-rule-studio.md  0002-single-foreground-activity-with-ambient-audio.md
docs/brainstorms/: 2026-06-26-legado-rule-engine-requirements.md  2026-06-28-own-js-host-api-requirements.md
docs/plans/: 2026-06-26-001-feat-legado-rule-engine-plan.md  2026-06-27-001-feat-maccms-source-and-engine-deepening-plan.md  (+1 more)
messages/en/: apps.json  common.json  (+7 more)
project.inlang/: settings.json
research/: color-system-directions.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/lj-capability/: Cargo.toml
src-tauri/crates/lj-capability/src/: lib.rs
src-tauri/crates/lj-compiler/: Cargo.toml
src-tauri/crates/lj-compiler/src/: compiler.rs  error.rs  legado_parser.rs  lib.rs
src-tauri/crates/lj-compiler/tests/: parser_test.rs  plan_compiler_test.rs
src-tauri/crates/lj-core/: Cargo.toml
src-tauri/crates/lj-core/src/: endpoint.rs  error.rs  extract_rule.rs  graph_schema.rs  lib.rs  media.rs  node.rs  node_data.rs  sandbox.rs  traits.rs
src-tauri/crates/lj-core/tests/: mapper_vocab_test.rs  types_test.rs
src-tauri/crates/lj-importer/: Cargo.toml
src-tauri/crates/lj-importer/fixtures/: legado_synthetic_source.json
src-tauri/crates/lj-importer/src/: lib.rs  native.rs  preview.rs  upgrade.rs  validate.rs
src-tauri/crates/lj-importer/src/legado/: mod.rs  parser.rs  translator.rs  types.rs
src-tauri/crates/lj-importer/src/maccms/: mod.rs  translator.rs  types.rs  vocab.rs
src-tauri/crates/lj-importer/tests/: legado_test.rs  native_test.rs  validate_test.rs
src-tauri/crates/lj-integration-tests/: Cargo.toml
src-tauri/crates/lj-integration-tests/fixtures/: legado_star_free_novel.json
src-tauri/crates/lj-integration-tests/src/: lib.rs
src-tauri/crates/lj-integration-tests/tests/: legado_media_graph.rs  legado_rule_system.rs  maccms_json_media_graph.rs  maccms_json_rule_system.rs  maccms_xml_media_graph.rs  native_media_graph.rs
src-tauri/crates/lj-integration-tests/tests/common/: mod.rs
src-tauri/crates/lj-media/: Cargo.toml
src-tauri/crates/lj-media/src/: lib.rs
src-tauri/crates/lj-node-extract/: Cargo.toml
src-tauri/crates/lj-node-extract/src/: error.rs  html.rs  html_css.rs  html_xpath.rs  json.rs  lib.rs  play_url.rs  processor.rs  regex_extract.rs  xml.rs
src-tauri/crates/lj-node-extract/tests/: html_xpath_test.rs  processor_test.rs
src-tauri/crates/lj-node-http/: Cargo.toml
src-tauri/crates/lj-node-http/src/: lib.rs  processor.rs  ssrf.rs  util.rs
src-tauri/crates/lj-node-http/src/processor/: adapter.rs  redirect.rs  request.rs
src-tauri/crates/lj-node-http/tests/: processor_test.rs
src-tauri/crates/lj-node-js/: Cargo.toml
src-tauri/crates/lj-node-js/src/: error.rs  host_api.rs  lib.rs  processor.rs
src-tauri/crates/lj-node-js/tests/: processor_test.rs
src-tauri/crates/lj-rule-model/: Cargo.toml
src-tauri/crates/lj-rule-model/src/: definition.rs  diagnostic.rs  endpoint.rs  error.rs  event.rs  extract_rule.rs  hash.rs  lib.rs  mapper_vocab.rs  plan.rs  policy.rs
src-tauri/crates/lj-rule-model/tests/: model_contract_test.rs
src-tauri/crates/lj-rule-system/: Cargo.toml
src-tauri/crates/lj-rule-system/src/: error.rs  lib.rs  system.rs  types.rs
src-tauri/crates/lj-rule-system/src/system/: capture.rs  error_mapping.rs  lifecycle.rs  query_adapter.rs  session_delivery.rs
src-tauri/crates/lj-runtime/: Cargo.toml
src-tauri/crates/lj-runtime/src/: capability.rs  effect.rs  executor.rs  graph.rs  lib.rs  mapper.rs  mapper_fields.rs  node_data.rs  plan_runtime.rs  processor.rs  tap.rs  tracing_mod.rs
src-tauri/crates/lj-runtime/src/effect/: archive.rs  cancellation.rs  contracts.rs  credentials.rs  witness.rs
src-tauri/crates/lj-runtime/src/plan_runtime/: api.rs  scheduler.rs  validation.rs
src-tauri/crates/lj-runtime/tests/: executor_test.rs  plan_runtime_test.rs
src-tauri/crates/lj-runtime/tests/plan_runtime_test/: replay_contract.rs  scheduling_contract.rs
src-tauri/crates/lj-sandbox/: Cargo.toml
src-tauri/crates/lj-sandbox/src/: capabilities.rs  lib.rs
src-tauri/crates/lj-sandbox/tests/: capabilities_test.rs
src-tauri/crates/lj-storage/: Cargo.toml
src-tauri/crates/lj-storage/migrations/0001_initial/: down.sql  up.sql
src-tauri/crates/lj-storage/migrations/0002_library/: down.sql  up.sql
src-tauri/crates/lj-storage/migrations/0003_event_projection/: down.sql  up.sql
src-tauri/crates/lj-storage/migrations/0004_execution_replay_pin_snapshot/: down.sql  up.sql
src-tauri/crates/lj-storage/migrations/0005_source_credentials/: down.sql  up.sql
src-tauri/crates/lj-storage/migrations/0006_effect_witness/: down.sql  up.sql
src-tauri/crates/lj-storage/src/: artifact.rs  async_storage.rs  candidate_install.rs  connection.rs  event_store.rs  execution.rs  execution_archive.rs  ids.rs  keyring_init.rs  lib.rs  library.rs  models.rs  projection_query.rs  repository.rs  retention_recovery.rs  schema.rs  storage.rs  types.rs  writer.rs
src-tauri/crates/lj-storage/src/types/: artifact.rs  candidate.rs  config.rs  error.rs  event.rs  execution.rs  library.rs  projection.rs  retention.rs
src-tauri/crates/lj-storage/tests/: event_projection_storage_test.rs  repository_test.rs
src-tauri/crates/lj-storage/tests/event_projection_storage_test/: archive_contract.rs  credential_writer_contract.rs  projection_retention_contract.rs  replay_contract.rs
src-tauri/icons/: .source-icon.sha256  icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: commands.rs  lib.rs  main.rs
static/: site.webmanifest
(+123 files in other folders)
