[workspace]
resolver = "2"
members = [
  "crates/lj-capability",
  "crates/lj-rule-model",
  "crates/lj-media",
  "crates/lj-compiler",
  "crates/lj-runtime",
  "crates/lj-node-http",
  "crates/lj-node-js",
  "crates/lj-node-extract",
  "crates/lj-importer",
  "crates/lj-integration-tests",
  "crates/lj-storage",
  "crates/lj-rule-system",
]

[lints]
workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/ocean-flux/lanjing"
rust-version = "1.96"

[workspace.lints]
clippy.all = "deny"
clippy.pedantic = "deny"

[workspace.dependencies]
tauri = "2"
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
tauri-plugin-svelte = "3"
# 第三方依赖统一在 workspace.dependencies 钉版本；子 crate 仅 { workspace = true }
# tauri 系用主版本轨解析最新兼容版。
# keyring v4 生态：生产用 keyring-core + 平台 store；测试用 keyring-core::mock。
diesel = { version = "2.3.11", features = ["sqlite"] }
diesel_migrations = "2.3.2"
# diesel 2.3 要求 libsqlite3-sys < 0.38
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.13.4", features = ["cookies", "gzip", "brotli"] }
cookie_store = "0.22.1"
rquickjs = "0.12.1"
blake3 = "1.8.5"
aes-gcm = { version = "0.11.0", features = ["getrandom"] }
zstd = "0.13.3"
keyring-core = "1.0.0"
windows-native-keyring-store = "1.1.0"
apple-native-keyring-store = { version = "1.0.1", features = ["keychain"] }
zbus-secret-service-keyring-store = "1.0.0"
async-trait = "0.1.91"
wiremock = "0.6.5"
tokio = { version = "1.53.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
async-stream = "0.3.6"
futures = "0.3.33"
uuid = { version = "1.24.0", features = ["v4", "serde"] }
url = "2.5.8"
hickory-resolver = { version = "0.26.1", features = ["tokio", "system-config"] }
scraper = "0.27.0"
xmloxide = "0.4.3"
jsonpath-rust = "1.0.5"
regex = "1.13.1"
encoding_rs = "0.8.35"
thiserror = "2.0.19"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[package]
name = "lanjing"
version.workspace = true
description = "Lanjing — cross-platform media discovery and reading workbench"
authors = ["Lanjing Contributors"]
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "lanjing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-svelte = { workspace = true }
tauri-plugin-window-state = { workspace = true }
lj-rule-system = { path = "crates/lj-rule-system" }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
keyring-core = { workspace = true }
lj-rule-system = { path = "crates/lj-rule-system", features = ["test-support"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
wiremock = { workspace = true }
