[package]
name = "lj-capability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "能力契约层：源声明支持的前端能力、入口节点与段输入类型"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
