[package]
name = "lj-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "核心域模型：标准化媒体数据模型、节点规格、提取规则定义"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
