[package]
name = "lj-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "标准媒体模型与资源图增量类型"

[lints]
workspace = true

[dependencies]
lj-capability = { path = "../lj-capability" }
serde = { workspace = true }
serde_json = { workspace = true }
