[package]
name = "lj-node-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "提取节点：HTML/XML/JSON/正则内容提取器"

[lints]
workspace = true

[dependencies]
lj-rule-model = { path = "../lj-rule-model" }
lj-runtime = { path = "../lj-runtime" }
scraper = { workspace = true }
xmloxide = { workspace = true }
jsonpath-rust = { workspace = true }
regex = { workspace = true }
encoding_rs = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
