[package]
name = "lj-node-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP 协议节点：网络请求处理器与 SSRF 防护"

[lints]
workspace = true

[dependencies]
lj-core = { path = "../lj-core" }
reqwest = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
