[package]
name = "lj-node-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP effect adapter：网络请求与 SSRF 防护"

[lints]
workspace = true

[dependencies]
lj-rule-model = { path = "../lj-rule-model" }
lj-runtime = { path = "../lj-runtime" }
lj-media = { path = "../lj-media" }
lj-capability = { path = "../lj-capability" }
reqwest = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
hickory-resolver = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
wiremock = { workspace = true }
