[package]
name = "lj-node-js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QuickJS effect adapter：受控脚本执行与宿主 API"

[lints]
workspace = true

[dependencies]
lj-rule-model = { path = "../lj-rule-model" }
lj-runtime = { path = "../lj-runtime" }
lj-capability = { path = "../lj-capability" }
rquickjs = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
