[package]
name = "lj-rule-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "规则模型：Definition/Plan/Event/Diagnostic/Policy 可序列化合同"

[lints]
workspace = true

[dependencies]
lj-capability = { path = "../lj-capability" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
