[package]
name = "lj-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "存储层：SQLite 持久化、仓库与模式管理"

[lints]
workspace = true

[dependencies]
lj-core = { path = "../lj-core" }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
lj-capability = { path = "../lj-capability" }
diesel = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
