[package]
name = "lj-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "存储层：SQLite 持久化、仓库与模式管理"

[lints]
workspace = true

[dependencies]
lj-rule-model = { path = "../lj-rule-model" }
lj-runtime = { path = "../lj-runtime" }
lj-media = { path = "../lj-media" }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
libsqlite3-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
keyring = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
diesel = { workspace = true }
tokio = { workspace = true }
